crates/oxc_react_compiler/tests/snapshots/codegen-nan-infinity-as-identifiers.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/codegen-nan-infinity-as-identifiers.js
---
import { c as _c } from "react/compiler-runtime";
// Constant propagation can produce NaN/Infinity from arithmetic.
// These must be emitted as valid JavaScript expressions,
// not non-finite NumericLiterals, which serialize to null in JSON.
function Component(t0) {
	const $ = _c(2);
	const { x } = t0;
	const t1 = x ? 0 / 0 : Infinity;
	let t2;
	if ($[0] !== t1) {
		t2 = <div>{t1}{-Infinity}</div>;
		$[0] = t1;
		$[1] = t2;
	} else {
		t2 = $[1];
	}
	return t2;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ x: true }]
};
