crates/oxc_react_compiler/tests/snapshots/compiled-function-nested-in-jsx.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/compiled-function-nested-in-jsx.js
---
import { c as _c } from "react/compiler-runtime";
function Component(t0) {
	const $ = _c(5);
	const { dataSource, viewRenderer } = t0;
	let t1;
	if ($[0] !== dataSource || $[1] !== viewRenderer) {
		t1 = function useConfig() {
			return {
				dataSource,
				viewRenderer
			};
		};
		$[0] = dataSource;
		$[1] = viewRenderer;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	const useConfig = t1;
	const t2 = useConfig;
	let t3;
	if ($[3] !== t2) {
		t3 = <Search filters={[{ getConfig: t2 }]} />;
		$[3] = t2;
		$[4] = t3;
	} else {
		t3 = $[4];
	}
	return t3;
}
