crates/oxc_react_compiler/tests/snapshots/complex-while.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/complex-while.js
---
function foo(a, b, c) {
	bb0: if (a) {
		while (b) {
			if (c) {
				break bb0;
			}
		}
	}
	return c;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
