crates/oxc_react_compiler/tests/snapshots/compound-assignment-context-result.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/compound-assignment-context-result.js
---
import { c as _c } from "react/compiler-runtime";
function Component(t0) {
	const $ = _c(2);
	const { values } = t0;
	let count;
	if ($[0] !== values) {
		count = 0;
		values.forEach((value) => {
			count = count + value;
			count = count + value;
			const result = count;
			console.log(result);
		});
		$[0] = values;
		$[1] = count;
	} else {
		count = $[1];
	}
	return count;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ values: [1, 2] }]
};
