crates/oxc_react_compiler/tests/snapshots/computed-call-evaluation-order.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/computed-call-evaluation-order.js
---
import { c as _c } from "react/compiler-runtime";
// Should print A, B, arg, original
function Component() {
	const $ = _c(1);
	const changeF = _temp2;
	let x;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		x = { f: _temp3 };
		(console.log("A"), x)[console.log("B"), "f"]((changeF(x), console.log("arg"), 1));
		$[0] = x;
	} else {
		x = $[0];
	}
	return x;
}
function _temp3() {
	return console.log("original");
}
function _temp2(o) {
	o.f = _temp;
}
function _temp() {
	return console.log("new");
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [],
	isComponent: false
};
